[project]
name = "ai-code-reviewer"
version = "0.1.0"
description = ""
authors = [
    {name = "wsmyc",email = "noureddine.yahiacherif.info@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers (>=4.56.1,<5.0.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "huggingface-hub (>=0.34.4,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
